2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Fix library path. r2k port works now.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h:
	  Enable 64 bit integer types for r2k port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/asm/r2k,
	  device/include/asm/r2k/features.h,
	  device/lib/r2k/Makefile.in,
	  Makefile.in,
	  src/SDCCmain.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  device/lib/Makefile.in,
	  configure.in,
	  device/lib/r2k/Makefile.in,
	  device/lib/r2k/strlen.s:
	  r2k library cleanup.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r2k,
	  device/include/sdcc-lib.h,
	  device/include/math.h,
	  device/include/stdarg.h:
	  Leland Morrison's Rabbit 2000 library port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in:
	  Add r2k port.
	* src/port.h,
	  src/z80/gen.c
	  src/z80/main.c
	  src/z80/z80.h:
	  Code cleanup.
	* src/z80/peep.c:
	  Fix code size for ex (sp), hl in r2k port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCCmain.c,
	  src/SDCCglue.c,
	  src/port.h,
	  src/z80/peeph-r2k.def,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/main.c,
	  src/z80/z80.h,
	  src/z80/peep.c:
	  Leland Morrison's Rabbit 2000 compiler port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asrab,
	  sdas/asrab/Makefile.in,
	  sdas/asrab/rabbitext.c,
	  sdas/asrab/clean.mk,
	  sdas/asrab/rabbit.h,
	  sdas/asrab/rabbitadr.c,
	  sdas/asrab/rabbitpst.c,
	  sdas/asrab/rabbitmch.c:
	  Leland Morrison's assembler for Rabbit 2000 and Rabbit 4000.

2011-10-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/glob.cc: add HCS08 instructions to disassembler
	* src/SDCCval.c: fixed constant to avoid unintended long long literal

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h:
	  Added typedefs for 64-bit integer types.
